<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ngagroupinc.movers.MainActivity"
    android:background="#c9c9c1">

    <TextView
        android:id="@+id/tv_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirmation"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_above="@+id/rlv_confirm_values" />

    <RelativeLayout
        android:id="@+id/rlv_confirm_values"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="#f2f2f2"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/tv_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_below"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_below="@+id/tv_provide"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#000"/>

        <LinearLayout
            android:id="@+id/llv_confirm_values"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:layout_below="@id/tv_below"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_confirm_firstname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.8"
                    android:text="@string/tv_confirm_firstname"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:textColor="#03702c"

                    android:layout_marginBottom="1dp"/>

                <EditText
                    android:id="@+id/ed_confirm_firstname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_confirm_firstname"
                    android:textSize="15sp"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/white_rectangle"
                    android:inputType="number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <TextView
                    android:id="@+id/tv_confirm_lastname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.8"
                    android:text="@string/tv_confirm_lastname"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:textColor="#03702c"

                    />

                <EditText
                    android:id="@+id/ed_confirm_lastname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_confirm_lastname"
                    android:textSize="15sp"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/white_rectangle"
                    android:inputType="number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_confirm_email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.8"
                    android:text="@string/tv_confirm_email"
                    android:textSize="18sp"
                    android:textColor="#03702c"
                    android:layout_marginTop="2dp"

                    />

                <EditText
                    android:id="@+id/ed_confirm_email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_confirm_email"
                    android:textSize="15sp"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/white_rectangle"
                    android:inputType="number"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <TextView
                    android:id="@+id/tv_confirm_phonenum"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.8"
                    android:text="@string/tv_confirm_phone"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:textColor="#03702c"

                    />

                <EditText
                    android:id="@+id/ed_confirm_phonenum"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_confirm_phone"
                    android:textSize="15sp"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/white_rectangle"
                    android:inputType="number"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:background="@drawable/green_rounded_corners"
                android:text="@string/btn_cancel"
                android:textColor="#000"
                />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/green_rounded_corners"
                android:text="@string/btn_confirm"
                android:textSize="15sp"
                android:textColor="#ffffff"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_provide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_provide"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/llv_confirm_values"
            android:layout_alignEnd="@+id/llv_confirm_values" />

    </RelativeLayout>

</RelativeLayout>
