<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ngagroupinc.movers.MainActivity"
    android:background="#c9c9c1">

    <RelativeLayout
        android:id="@+id/rlv_zip_values"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="#f2f2f2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/tv_help_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_helpus"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#21683b"/>
        <TextView
            android:id="@+id/tv_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_setup"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_below="@id/tv_help_us"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#2c7949"/>

        <LinearLayout
            android:id="@+id/llv_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/tv_setup"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/tv_from"
                    android:textSize="16sp"
                    android:layout_margin="6dp"/>

                <EditText
                    android:id="@+id/ed_city_from"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_city"
                    android:textSize="15sp"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/white_rectangle"
                    android:inputType="number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <TextView
                    android:id="@+id/tv_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/tv_to"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_margin="6dp"/>

                <EditText
                    android:id="@+id/ed_city_to"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_city"
                    android:textSize="15sp"
                    android:layout_margin="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/white_rectangle"
                    android:inputType="number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginTop="6dp">
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/tv_date"
                    android:textSize="16sp"
                    android:layout_margin="6dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/ed_date"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2.3"
                    android:gravity="center"
                    android:hint="@string/ed_date"
                    android:textSize="15sp"
                    android:background="@drawable/white_rectangle"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="6dp"
                    android:inputType="date"
                    />
                <ImageView
                    android:id="@+id/iv_date"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_action_name"
                    android:background="#21683b"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/tv_size"
                    android:textSize="16sp"
                    android:layout_margin="6dp"/>

                <Spinner
                    android:id="@+id/sp_select"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/ed_select"
                    android:textSize="15sp"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/spinner_drawable"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="6dp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:background="@drawable/green_rounded_corners"
                android:text="@string/btn_skip"
                android:textColor="#000"
                />

            <Button
                android:id="@+id/btn_giveme_quotes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/green_rounded_corners"
                android:text="@string/btn_give_me"
                android:textSize="15sp"
                android:textColor="#ffffff"
                />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_my_moving_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_my_moving"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:layout_above="@+id/rlv_zip_values" />

</RelativeLayout>
