<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ngagroupinc.movers.MainActivity"
    android:background="#ccf1eeee">

    <TextView
        android:id="@+id/tv_facebook_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fb_reg"
        android:layout_above="@+id/llv_signin_form"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        />

    <LinearLayout
        android:id="@+id/llv_signin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/tv_facebook_registration">
        <TextView
            android:id="@+id/tv_few_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_few_more"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"/>
        <com.ngagroupinc.movers.RoundedImageView
            android:id="@+id/iv_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/dawnlearner"

            />
        <LinearLayout
            android:id="@+id/llv_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            >
        <EditText
            android:id="@+id/ed_first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/ed_first_name"
            android:textSize="15sp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/relativelayoutborder"
            android:inputType="textAutoComplete"
            />
        <EditText
            android:id="@+id/ed_last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/ed_last_name"
            android:background="@drawable/relativelayoutborder"
            android:gravity="center"
            android:textSize="15sp"

            android:layout_marginBottom="6dp"

            android:inputType="textAutoComplete"
            />
        <EditText
            android:id="@+id/ed_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15sp"

            android:hint="@string/ed_mobile_phone"
            android:background="@drawable/relativelayoutborder"
            android:gravity="center"

            android:inputType="number"
            />
        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/green_rounded_corners"
            android:text="@string/btn_next"
            android:textColor="#ffffff"
            />


    </LinearLayout>
</RelativeLayout>
